--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,7 @@
 @tailwind base;
+html {
+  scroll-behavior: smooth;
+}
 @tailwind components;
 @tailwind utilities;
 
@@ -17,4 +20,21 @@
 body {
   color: var(--foreground);
   background: var(--background);
+}
+
+/* WebKit browsers (Chrome, Edge, Safari) */
+::-webkit-scrollbar {
+  @apply w-2 h-2;
+}
+
+::-webkit-scrollbar-track {
+  @apply bg-gray-400 rounded-xl;
+}
+
+::-webkit-scrollbar-thumb {
+  @apply bg-yellow-500 rounded-xl;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  @apply bg-yellow-600 rounded-xl;
 }
